2024-12-21T00:47:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12440615470 # 516
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-21
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 431 821 / 433 823
* notice: next accum: outdated-unq outdated-all / unq all: 432 822 / 433 823
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-07] / []

2024-12-19T00:52:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12404054302 # 514
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-19
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 430 820 / 433 823
* notice: next accum: outdated-unq outdated-all / unq all: 431 821 / 433 823
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-05] / []

2024-12-16T00:55:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12343893907 # 511
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-16
* notice: last 14d: unq all: 1 3
* notice: prev accum: outdated-unq outdated-all / unq all: 429 819 / 432 822
* notice: next accum: outdated-unq outdated-all / unq all: 430 820 / 433 823
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-12-02] / [2024-12-15]

2024-12-08T00:57:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12217510347 # 503