@@ -1,3 +1,12 @@
+2024-12-30T00:51:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12540155772 # 525
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 432 822 / 433 823
+* notice: next accum: outdated-unq outdated-all / unq all: 433 823 / 434 824
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-12-15] / [2024-12-29]
+
 2024-12-21T00:47:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12440615470 # 516
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-21
